MusicPlayer: Harmonised the bgcolors on sections on index.html and artist.html

--- a/codingNinjas/Frontend/MusicPlayer/artist.html
+++ b/codingNinjas/Frontend/MusicPlayer/artist.html
@@ -36,14 +36,14 @@
         <!-- End of HEADER -->
 
         <!-- Start of ASIDE-SECTION-->
-        <aside>
+        <aside class="translucent-bg-100 item-with-bg">
             <div>
-                <div class="aside-header item-with-bg">
+                <div class="aside-header translucent-bg-100 item-with-bg">
                     <div class="container-heading">Related Artists</div>
                     <div class="dropdown">Btn</div>
                 </div>
 
-                <div class="container-content item-with-bg">
+                <div class="container-content translucent-bg-100 item-with-bg">
                     <ul id="related-artists" class="list-in-container playlist-ul">
                         <!-- Code injected here using 'html-injector-indexPage.js' -->
                     </ul>
@@ -55,7 +55,7 @@
                     <div class="dropdown">Btn</div>
                 </div>
 
-                <div class="container-content item-with-bg">
+                <div class="container-content translucent-bg-100 item-with-bg">
                     <ul id="related-songs" class="list-in-container playlist-ul">
                         <!-- Code injected here using 'html-injector-indexPage.js' -->
                     </ul>
@@ -66,13 +66,13 @@
 
         <!-- Start of MAIN-BODY -->
 
-        <div id="artist-cover" class="artist-cover flex-row item-with-bg">
+        <div id="artist-cover" class="artist-cover translucent-bg-100 flex-row item-with-bg">
             <!-- Code injected here using 'html-injector-indexPage.js' -->
         </div>
 
         <div id="artist-songs" class="artist-songs">
             <div class="container-heading">Artist's Songs</div>
-            <div class="container-content item-with-bg">
+            <div class="container-content translucent-bg-100 item-with-bg">
                 <ul id="artist-songs-ul"class="span-100-ul">
                     <!-- Code injected here using 'html-injector-indexPage.js' -->
                 </ul>
