--- a/codingNinjas/Frontend/MusicPlayer/index.html
+++ b/codingNinjas/Frontend/MusicPlayer/index.html
@@ -37,7 +37,7 @@
         <!-- End of HEADER -->
 
         <!-- Start of ASIDE-SECTION-->
-        <aside>
+        <aside class="translucent-bg-100 item-with-bg">
             <div>
                 <div class="aside-header item-with-bg">
                     <div class="container-heading">Playlist</div>
@@ -70,7 +70,7 @@
         <!-- Start of MAIN-BODY -->
 
         <!-- Start of Carousel Again -->
-        <div class="carousel-container">
+        <div class="carousel-container translucent-bg-100 item-with-bg">
             <button class="carousel_button carousel_button-prev is-hidden">
                 &#10094;
             </button>
@@ -88,22 +88,22 @@
         <!-- End of Carousel Again -->
 
 
-        <div id="favorites-container" class="favorites-container">
+        <div id="favorites-container" class="favorites-container translucent-bg-100 item-with-bg">
             <!-- Code injected here using 'html-injector-indexPage.js' -->
         </div>
 
-        <div id="latest-releases-container" class="latest-releases-container">
+        <div id="latest-releases-container" class="latest-releases-container translucent-bg-100 item-with-bg">
             <!-- Code injected here using 'html-injector-indexPage.js' -->
         </div>
 
-        <div id="artists-container" class="artists-container">
+        <div id="artists-container" class="artists-container translucent-bg-100 item-with-bg">
             <!-- Code injected here using 'html-injector-indexPage.js' -->
         </div>
 
-        <div id="genres-container" class="genres-container">
+        <div id="genres-container" class="genres-container translucent-bg-100 item-with-bg">
             <!-- Code injected here using 'html-injector-indexPage.js' -->
         </div>
-        <div id="radios-container" class="radios-container">
+        <div id="radios-container" class="radios-container translucent-bg-100 item-with-bg">
             <!-- Code injected here using 'html-injector-indexPage.js' -->
         </div>
 
