--- a/codingNinjas/Frontend/MusicPlayer/index.html
+++ b/codingNinjas/Frontend/MusicPlayer/index.html
@@ -117,37 +117,7 @@
 
         <!-- Start of Play-bar Modal -->
         <div id="play-modal-container">
-            <div id="seek-bar"></div>
-            <div id="song-info-img">
-                <img
-                    src="https://images.pexels.com/photos/534283/pexels-photo-534283.jpeg?auto=compress&cs=tinysrgb&h=130"
-                />
-            </div>
-            <div id="song-title" class="title-text">Song Name big one</div>
-            <div id="song-subtitle" class="subtitle-text">
-                Artist Name big one
-            </div>
-            <div id="progress-text">
-                <div id="current-time">00:00</div> &nbsp;|&nbsp;
-                <div id="total-time">00:00</div>
-            </div>
-            <div id="play-controls-section">
-                <!-- Play Prev Symbol -->
-                <i class="fas fa-backward"></i>
-                <!-- Play Symbol -->
-                <i id="btn-play" class="fas fa-play-circle"></i>
-                <audio id="audio-tag" src=""></audio>
-                <!-- Pause Symbol -->
-                <i id="btn-pause" class="fas fa-pause-circle"></i>
-                <!-- Play Next Symbol -->
-                <i class="fas fa-forward"></i>
-                <!-- Stop Symbol -->
-                <i id="btn-stop" class="fas fa-stop-circle"></i>
-                <!-- Volume Symbol -->
-                <i id="btn-volume" class="fas fa-volume-down"></i>
-                <!-- Volume Mute Symbol -->
-                <i id="btn-mute" class="fas fa-volume-mute"></i>
-            </div>
+            <!-- Code injected here using 'html-injector-indexPage.js' -->
         </div>
         <!-- End of Play-bar Modal -->
     </body>
