MusicPlayer: Clicking on song items can play that in playbar and show related info too.

--- a/codingNinjas/Frontend/MusicPlayer/artist.html
+++ b/codingNinjas/Frontend/MusicPlayer/artist.html
@@ -26,8 +26,10 @@
                 <script src="scripts/html-injector-indexPage.js" defer></script>
             <!-- Navigation related -->
                 <script src="scripts/nav.js" defer></script>
-            <!-- Carousel related -->
+            <!-- Music Player Related -->
                 <script src="scripts/music-player.js" defer></script>
+                <script src="scripts/click-play-item.js" defer></script>
+
 
     </head>
     <body>
