--- a/codingNinjas/Frontend/MusicPlayer/index.html
+++ b/codingNinjas/Frontend/MusicPlayer/index.html
@@ -27,7 +27,9 @@
         <script src="scripts/nav.js" defer></script>
         <!-- Carousel related -->
         <script src="scripts/carousel.js" defer></script>
+        <!-- Music Player Related -->
         <script src="scripts/music-player.js" defer></script>
+        <script src="scripts/click-play-item.js" defer></script>
     </head>
     <body>
         <!-- Start of HEADER -->
