MusicPlayer: Artist pages now open by using artistid in session storage and populate the artist.html page accordingly.

--- a/codingNinjas/Frontend/MusicPlayer/index.html
+++ b/codingNinjas/Frontend/MusicPlayer/index.html
@@ -25,6 +25,7 @@
         <script src="scripts/html-injector-indexPage.js" defer></script>
         <!-- Navigation related -->
         <script src="scripts/nav.js" defer></script>
+        <script src="scripts/click-open-artist.js" defer></script>
         <!-- Carousel related -->
         <script src="scripts/carousel.js" defer></script>
         <!-- Music Player Related -->
@@ -98,7 +99,7 @@
             <!-- Code injected here using 'html-injector-indexPage.js' -->
         </div>
 
-        <div id="artists-container" class="artists-container translucent-bg-100 item-with-bg">
+        <div id="artists-container" class="artists-container translucent-bg-100 item-with-bg artist-listener">
             <!-- Code injected here using 'html-injector-indexPage.js' -->
         </div>
 
