--- a/codingNinjas/Frontend/MusicPlayer/artist.html
+++ b/codingNinjas/Frontend/MusicPlayer/artist.html
@@ -26,6 +26,7 @@
                 <script src="scripts/html-injector-indexPage.js" defer></script>
             <!-- Navigation related -->
                 <script src="scripts/nav.js" defer></script>
+                <script src="scripts/click-open-artist.js" defer></script>
             <!-- Music Player Related -->
                 <script src="scripts/music-player.js" defer></script>
                 <script src="scripts/click-play-item.js" defer></script>
@@ -48,7 +49,7 @@
                 </div>
 
                 <div class="container-content translucent-bg-100 item-with-bg">
-                    <ul id="related-artists" class="list-in-container playlist-ul">
+                    <ul id="related-artists" class="list-in-container playlist-ul artist-listener">
                         <!-- Code injected here using 'html-injector-indexPage.js' -->
                     </ul>
                 </div>
