MusicPlayer: single class used for playbar-listening. Relevant sections in both pages are now playable.

--- a/codingNinjas/Frontend/MusicPlayer/index.html
+++ b/codingNinjas/Frontend/MusicPlayer/index.html
@@ -59,10 +59,7 @@
                 </div>
 
                 <div class="container-content item-with-bg">
-                    <ul
-                        id="playlist-songs"
-                        class="list-in-container playlist-ul"
-                    >
+                    <ul id="playlist-songs" class="list-in-container playlist-ul playbar-listener">
                         <!-- Code injected here using 'html-injector-indexPage.js' -->
                     </ul>
                 </div>
@@ -95,7 +92,7 @@
             <!-- Code injected here using 'html-injector-indexPage.js' -->
         </div>
 
-        <div id="latest-releases-container" class="latest-releases-container translucent-bg-100 item-with-bg">
+        <div id="latest-releases-container" class="latest-releases-container translucent-bg-100 item-with-bg playbar-listener">
             <!-- Code injected here using 'html-injector-indexPage.js' -->
         </div>
 
