--- a/codingNinjas/Frontend/MusicPlayer/artist.html
+++ b/codingNinjas/Frontend/MusicPlayer/artist.html
@@ -61,7 +61,7 @@
                 </div>
 
                 <div class="container-content translucent-bg-100 item-with-bg">
-                    <ul id="related-songs" class="list-in-container playlist-ul">
+                    <ul id="related-songs" class="list-in-container playlist-ul playbar-listener">
                         <!-- Code injected here using 'html-injector-indexPage.js' -->
                     </ul>
                 </div>
@@ -78,7 +78,7 @@
         <div id="artist-songs" class="artist-songs translucent-bg-100 item-with-bg">
             <div class="container-heading">Artist's Songs</div>
             <div class="container-content translucent-bg-100 item-with-bg">
-                <ul id="artist-songs-ul" class="span-100-ul">
+                <ul id="artist-songs-ul" class="span-100-ul playbar-listener">
                     <!-- Code injected here using 'html-injector-indexPage.js' -->
                 </ul>
             </div>
